manifest/gitlab.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: gitlab
  name: gitlab
  labels:
    app: gitlab
spec:
  ports:
    - name: gitlab-ui
      port: 80
      protocol: TCP
      targetPort: 80
      nodePort: 30080
    - name: gitlab-ssh
      port: 22
      protocol: TCP
      targetPort: 22
      nodePort: 30022
  selector:
    app: gitlab
    tier: frontend
  type: NodePort
---
apiVersion: apps/v1beta1
kind: StatefulSet
metadata:
  namespace: gitlab
  name: gitlab 
  labels:
    app: gitlab
spec:
  serviceName: "gitlab"
  podManagementPolicy: Parallel
  replicas: 1
  template:
    metadata:
      labels:
        app: gitlab
        tier: frontend
    spec:
      containers:
        - image: gitlab/gitlab-ce:latest
          imagePullPolicy: Always 
          name: gitlab
          ports:
            - containerPort: 80
              name: ui
            - containerPort: 22
              name: ssh 
          volumeMounts:
            - name: logs 
              mountPath: /var/log/gitlab
            - name: config 
              mountPath: /etc/gitlab
            - name: data 
              mountPath: /var/opt/gitlab
            - name: host-time
              mountPath: /etc/localtime
              readOnly: true
      volumes:
        - name: data 
          persistentVolumeClaim:
            claimName: gitlab-data
        - name: config 
          persistentVolumeClaim:
            claimName: gitlab-config
        - name: logs 
          persistentVolumeClaim:
            claimName: gitlab-logs
        - name: host-time
          hostPath:
            path: /etc/localtime
