manifest/postgres.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: gitlab
  name: postgresql
  labels:
    app: gitlab
spec:
  ports:
    - port: 5432
  selector:
    app: gitlab
    tier: postgreSQL
---
apiVersion: apps/v1beta1
kind: StatefulSet
metadata:
  namespace: gitlab
  name: postgresql
  labels:
    app: gitlab
spec:
  serviceName: "postgresql"
  podManagementPolicy: Parallel
  replicas: 1
  template:
    metadata:
      labels:
        app: gitlab
        tier: postgreSQL
    spec:
      terminationGracePeriodSeconds: 10
      containers:
        - image: postgres:9.6.2-alpine
          name: postgresql
          args: 
            - -c
            - max_connections=1000 
          ports:
            - containerPort: 5432
              name: postgresql
          volumeMounts:
            - name: postgresql
              mountPath: /var/lib/postgresql/data
            - name: host-time
              mountPath: /etc/localtime
              readOnly: true
      volumes:
        - name: postgresql
          persistentVolumeClaim:
            claimName: postgres-claim
        - name: host-time
          hostPath:
            path: /etc/localtime
