manifest/redis.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: gitlab
  name: redis
  labels:
    app: gitlab
spec:
  ports:
    - port: 6379
      targetPort: 6379
  selector:
    app: gitlab
    tier: backend
---
apiVersion: apps/v1beta1
kind: StatefulSet
metadata:
  namespace: gitlab
  name: redis
  labels:
    app: gitlab
spec:
  serviceName: "redis"
  podManagementPolicy: Parallel
  replicas: 1
  template:
    metadata:
      labels:
        app: gitlab
        tier: backend
    spec:
      terminationGracePeriodSeconds: 10
      containers:
        - image: redis:3.0.7-alpine
          name: redis
          ports:
            - containerPort: 6379
              name: redis
          volumeMounts:
            - name: redis
              mountPath: /data
            - name: host-time
              mountPath: /etc/localtime
              readOnly: true
      volumes:
        - name: redis
          persistentVolumeClaim:
            claimName: redis-claim
        - name: host-time
          hostPath:
            path: /etc/localtime
