manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: gitlab
  name: gitlab-cl
  labels:
    app: gitlab-cl
spec:
  clusterIP: 10.254.0.16
  ports:
    - name: gitlab-ui
      port: 80
      protocol: TCP
      targetPort: 80
    - name: gitlab-ssh
      port: 22
      protocol: TCP
      targetPort: 22
  selector:
    app: gitlab
    tier: frontend
