manifest/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gitlab
  namespace: gitlab
spec:
  rules:
  - host: gmt.gitlab.me
    http:
      paths:
      - path: /
        backend:
          serviceName: gitlab
          servicePort: 80
